fixed description text on spot details overflowing

--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -91,6 +91,11 @@
     padding-bottom: 10px;
 }
 
+.description-container-spot-details > p {
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
+
 .hosted-by-text {
     font-size: 28px;
 }
